
  * Move the sample package install/remove scripts from
    debian-emacs-policy to the files sample-package-install-foo and
    sample-package-remove-foo in /usr/share/doc/emacsen-common.

  * Fix some suspicious code in the sample package install/remove scripts.
    Thanks to Kevin Ryde <user42@zip.com.au>. (closes: 424940)

  * Update debian-file->string to use insert-file-contents-literally.
    Thanks to Jari Aalto <jari.aalto@poboxes.com>. (closes: 269155)

  * Thanks to Agustin Martin Domingo <agmartin@debian.org> for collecting
    and incorporating many of the fixes in the previous release, this
    release, and probably the next several releases into his git
    repository.  That work is being used heavily as a reference during
    these updates.

 -- Rob Browning <rlb@defaultvalue.org>  Sun, 17 May 2009 15:31:39 -0700

emacsen-common (1.4.18) unstable; urgency=low

  * Add --no-site-file and --no-init-file for the compilation of
    emacsen-common's .elc files.  Those options should be fine for
    emacsen-common itself right now.  Thanks to Peter S Galbraith
    <psg@debian.org>.  (closes: 132355)

  * Fix minor documentation bug.  Thanks to Roland Stigge
    <stigge@antcom.de>. (closes: 208414)

  * Print the error message when debian-run-directories encounters an
    error while loading a file.  Thanks to Kevin Ryde <user42@zip.com.au>.
    (closes: 329030)

 -- Rob Browning <rlb@defaultvalue.org>  Sun, 10 May 2009 20:52:52 -0700

emacsen-common (1.4.17) unstable; urgency=low

  * Remove "Conflicts: emacs".  If I recall correctly, this dates back to
    a time when the Emacs binary package was just named "emacs"
    (i.e. unversioned), and before the creation of emacsen-common and the
    Debian Emacs Policy.  The Conflicts should be safe to remove now, and
    the removal will allow us to create a new emacs-defaults source
    package (a la gcc-defaults) that will produce an emacs package that