@@ -8,7 +8,8 @@ emacsen-common (1.4.19) unstable; urgency=low
     Thanks to Kevin Ryde <user42@zip.com.au>. (closes: 424940)
 
   * Update debian-file->string to use insert-file-contents-literally.
-    Thanks to Jari Aalto <jari.aalto@poboxes.com>. (closes: 269155)
+    Change gnus-nntpserver-file defvar to setq.  Thanks to Jari Aalto
+    <jari.aalto@poboxes.com>. (closes: 269155)
 
   * Thanks to Agustin Martin Domingo <agmartin@debian.org> for collecting
     and incorporating many of the fixes in the previous release, this
@@ -16,7 +17,7 @@ emacsen-common (1.4.19) unstable; urgency=low
     repository.  That work is being used heavily as a reference during
     these updates.
 
- -- Rob Browning <rlb@defaultvalue.org>  Sun, 17 May 2009 15:31:39 -0700
+ -- Rob Browning <rlb@defaultvalue.org>  Sun, 17 May 2009 15:34:30 -0700
 
 emacsen-common (1.4.18) unstable; urgency=low
 
